# mtl-mmc-api-sample-app

./: LICENSE  README.md
IXWebSocket/: .gitignore
gtest/: CMakeLists.txt  client_unit_test.cpp
mtl-sample-api-client/: CMakeLists.txt
mtl-sample-api-client/include/: MtlApi.h  MtlWebSocket.h
mtl-sample-api-client/src/: MtlApi.cpp  MtlWebSocket.cpp  main.cpp
mtl-sample-api-server/: CMakeLists.txt
mtl-sample-api-server/include/: SampleDataStore.h  SampleServer.h
mtl-sample-api-server/src/: SampleDataStore.cpp  SampleServer.cpp  main.cpp
